Created project structure and added the effects of led strip

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,15 @@
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
+upload_protocol = esptool
+board_build.mcu = esp8266
 framework = arduino
+upload_tool = usbasp
+monitor_speed = 115200
+upload_speed = 115200
+upload_resetmethod = ck
+upload_port = /dev/ttyUSB0
+lib_deps = 
+	bblanchon/ArduinoJson@^6.18.3
+	adafruit/Adafruit MQTT Library@^2.4.2
+	adafruit/Adafruit NeoPixel@1.9.0
