--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.18.3
 	adafruit/Adafruit MQTT Library@^2.4.2
 	adafruit/Adafruit NeoPixel@1.9.0
+	tzapu/WiFiManager@^0.16.0
